@@ -57,7 +57,6 @@ Subversion repository. See <a href="readme-Subversion.html">readme-Subversion.ht
 <h3>Table of Contents</h3>
 <ol>
   <li><a href="#Environment">Environment</a></li>
-  <li><a href="#Buildall_bat">BuildAll.bat</a></li>
   <li><a href="#ProjectFiles">Project Files</a></li>
   <li><a href="#Compiling_expat">Compiling expat</a></li>
   <li><a href="#Compiling_scew">Compiling SCEW</a></li>
@@ -140,24 +139,6 @@ let the Visual Studio to convert. Files are:
 Studio's <em>Include</em> and <em>Library</em> directories. The easiest way is to use the
 "<em>Visual Studio Registration\Register PSDK directories with Visual Studio</em>" item from
 the "<em>Platform SDK</em>" start menu folder.</p>
-
-<h3><a name="Buildall_bat">buildall.bat</a></h3>
-<p>There is a <code>buildall.bat</code> in the root folder of source tree. This batch file invokes
-<code>devenv.exe</code> to build (almost) all projects in WinMerge tree. However, it has
-a couple
-of restrictions:
-<ul>
-  <li>It cannot convert project files from VS2003 format to newer formats. This must be done first
-      by opening every project to Visual Studio.</li>
-  <li>It cannot build 64-bit shell extension</li>
-</ul></p>
-
-<p>To use <code>buildall.bat</code>:
-<ul>
-  <li>Open Visual Studio Command Prompt (or run <code>vcvars32.bat</code> from Command Prompt).</li>
-  <li>Go to root folder of WinMerge folder structure.</li>
-  <li>Run the batch file.</li>
-</ul></p>
 
 <h3><a name="ProjectFiles">Project files</a></h3>
 <p>Project file for WinMerge executable (in <code>/Src</code>) and other projects like
